Fix username or levels too long in leaderboard

--- a/less/style.less
+++ b/less/style.less
@@ -789,6 +789,9 @@ body {
 .leaderboard-account {
     border-radius: 10px;
     border: 2px solid;
+    [class^="col"] {
+	overflow: auto;
+    }
     &>a {
 	display: block;
 	padding: 10px 20px;
